src/test/deca/context/valid/expr_new_type_class.deca
// Test de la règle (3.42) : on ne peut instancier un objet
// que si la classe de l'objet existe.

class A {}

{
    A a = new A();
    // fonctionne car la classe A existe
    
    // B b = new B();
    // ne fonctionne pas car la classe B n'existe pas
}
